@@ -357,6 +357,10 @@ Again, you can add multiple ``remove_query_param`` calls, and the results will b
 
 This will return ``http://example.com/``
 
+Finally, you can pass individual template variables to the ``remove_query_param`` calls. To do this, Spurl uses Django's template system. For example:
+
+{% spurl base="http://example.com/?foo=bar&bar=baz" remove_query_param="{{ variable_name }}" %}
+
 #### secure
 
 Control whether the generated URL starts with ``http`` or
